<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />

    <item
        android:title="@string/action_strategy"
        app:showAsAction="never"
        >
        <menu>
            <group
                android:id="@+id/group_strategy"
                android:checkableBehavior="single"
                >
                <item
                    android:id="@+id/item_asynctask"
                    android:title="@string/item_asynctask"
                    android:checked="true"
                    />
                <item
                    android:id="@+id/item_aquery"
                    android:title="@string/item_aquery"
                    />
                <item
                    android:id="@+id/item_volley"
                    android:title="@string/item_volley"
                    />
                <item
                    android:id="@+id/item_retrofit"
                    android:title="@string/item_retrofit"
                    />
            </group>
        </menu>
    </item>

    <item
        android:title="@string/action_converter"
        app:showAsAction="never"
        >
        <menu>
            <group
                android:id="@+id/group_converter"
                android:checkableBehavior="single"
                >
                <item
                    android:id="@+id/item_gson"
                    android:title="@string/item_gson"
                    android:checked="true"
                    />
                <item
                    android:id="@+id/item_jackson"
                    android:title="@string/item_jackson"
                    />
                <item
                    android:id="@+id/item_logan_square"
                    android:title="@string/item_logan_square"
                    />
            </group>
        </menu>
    </item>

</menu>